tests/ui/derive/fail_foundry_id_missing_id.rs
use foundry::FoundryId;

#[derive(FoundryId)]
enum Guard {
    #[foundry(value = "api")]
    Api,
}

fn main() {}
